--- a/deploy/index.html
+++ b/deploy/index.html
@@ -13,33 +13,45 @@
 <body>
 
 
-    <section>
+    <section id="section-1">
         <img src="img/section-1/hero.jpg" alt="Honest products on a shelf">
     </section>
-    <section>
-            <aside><img src="img/section-2/aside.png" alt="mother holding happy baby"></aside>
-            <h1>Our mission is to empower people to live healthy, happy lives. </h1>
-            <h3>We're committed to creating effective, safe, delightful, accessible, responsible products.</h3>
-        </section>
-    <section>
-                <img src="img/section-3/hero2.jpg" alt="hands using Honest face+body lotion">
-                <h1>You shouldn’t have to choose between what works and what’s good for you.</h1>
+    <section id="section-2">
+            <section id="section-2-container">
+                <div id="section-2-content">
+                    <h1>Our mission is to empower people to live healthy, happy lives. </h1>
+                    <h3>We're committed to creating effective, safe, delightful, accessible, responsible products.</h3>
+                </div>
             </section>
-    <section>
-                    <ul>
-                        <li><img src="img/section-4/gallery-1.jpg" alt="beauty products on pink background"></li>
-                        <li><img src="img/section-4/gallery-2.jpg" alt="Honest baby products on changing table"></li>
-                        <li><img src="img/section-4/gallery-3.jpg" alt="Honest mud mask"></li>
-                    </ul>
+            <aside><img src="img/section-2/aside.png" alt="mother holding happy baby"></aside>
+        </section>
+    <section id="section-3">
+                <img src="img/section-3/hero2.jpg" alt="hands using Honest face+body lotion">
+            
+                <section id="section-3-container">
+                    <div id="section-3-content">
+                        <h1>You shouldn’t have to choose between what works and what’s good for you.</h1>
+                    </div>
                 </section>
-    <section>
-                        <aside><img src="img/section-5/circlemask.png" alt="Honest Face Oil in circle"></aside>
-                        <p>We’re a wellness brand empowering people to live happy, healthy lives. And we’re also people, just like you. When our founder couldn’t find one brand to trust for all her everyday needs, she had to create it. And she knew that there had to be others out there looking for safe products, simple solutions and clear information about their choices, just like her. If you want trusted, effective products that work for your family, your home and yourself, you’re Honest, too.</p>
+                
+            </section>
+    <section id="section-4">
+                        <ul>
+                            <li><img src="img/section-4/gallery-1.jpg" alt="beauty products on pink background"></li>
+                            <li><img src="img/section-4/gallery-2.jpg" alt="Honest baby products on changing table"></li>
+                            <li><img src="img/section-4/gallery-3.jpg" alt="Honest mud mask"></li>
+                        </ul>
+                </section>
+    <section id="section-5">
+                        <div id="section-5-content">
+                            <aside><img src="img/section-5/circle-mask.png" alt="Honest Face Oil in circle"></aside>
+                            <p>We’re a wellness brand empowering people to live happy, healthy lives. And we’re also people, just like you. When our founder couldn’t find one brand to trust for all her everyday needs, she had to create it. And she knew that there had to be others out there looking for safe products, simple solutions and clear information about their choices, just like her. If you want trusted, effective products that work for your family, your home and yourself, you’re Honest, too.</p>
+                        </div>
                     </section>
-    <section>
+    <footer>
                             <img src="img/footer/logo.png" alt="Honest Company Logo">
                             <h4>©2020</h4>
-                        </section>
+                        </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Greensock -->
