--- a/deploy/index.html
+++ b/deploy/index.html
@@ -48,9 +48,11 @@
                             <p>We’re a wellness brand empowering people to live happy, healthy lives. And we’re also people, just like you. When our founder couldn’t find one brand to trust for all her everyday needs, she had to create it. And she knew that there had to be others out there looking for safe products, simple solutions and clear information about their choices, just like her. If you want trusted, effective products that work for your family, your home and yourself, you’re Honest, too.</p>
                         </div>
                     </section>
-    <footer>
-                            <img src="img/footer/logo.png" alt="Honest Company Logo">
+    <footer id="footer">
+                            <div id="footer-content">
+                                <img src="img/footer/logo.png" alt="Honest Company Logo">
                             <h4>©2020</h4>
+                            </div>
                         </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
