--- a/deploy/index.html
+++ b/deploy/index.html
@@ -14,7 +14,6 @@
 
 
     <section id="section-1">
-        <img src="img/section-1/hero.jpg" alt="Honest products on a shelf">
     </section>
     <section id="section-2">
         
@@ -35,7 +34,9 @@
             
                     <section id="section-3-container">
                         <div id="section-3-content">
+                            <hr>
                             <h1>You shouldn’t have to choose between what works and what’s good for you.</h1>
+                            <hr>
                         </div>
                     </section>
             </section>
@@ -48,8 +49,12 @@
                 </section>
     <section id="section-5">
                         <div id="section-5-content">
-                            <aside><img src="img/section-5/circle-mask.png" alt="Honest Face Oil in circle"></aside>
-                            <p>We’re a wellness brand empowering people to live happy, healthy lives. And we’re also people, just like you. When our founder couldn’t find one brand to trust for all her everyday needs, she had to create it. And she knew that there had to be others out there looking for safe products, simple solutions and clear information about their choices, just like her. If you want trusted, effective products that work for your family, your home and yourself, you’re Honest, too.</p>
+                            <aside>
+                                <img src="img/section-5/circle-mask.png" alt="Honest Face Oil in circle">
+                            </aside>
+                            <section>
+                                <p>We’re a wellness brand empowering people to live happy, healthy lives. And we’re also people, just like you. When our founder couldn’t find one brand to trust for all her everyday needs, she had to create it. And she knew that there had to be others out there looking for safe products, simple solutions and clear information about their choices, just like her. If you want trusted, effective products that work for your family, your home and yourself, you’re Honest, too.</p>
+                            </section>
                         </div>
                     </section>
     <footer id="footer">
