background image aside

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -18,12 +18,14 @@
     <section id="section-2">
         
             <div id="section-2-desktop">
-                <aside><img src="img/section-2/aside.png" alt="mother holding happy baby"></aside>
+                <aside></aside>
         
                 <section id="section-2-container">
                     <div id="section-2-content">
+                        <hr>
                         <h1>Our mission is to empower people to live healthy, happy lives. </h1>
                         <h3>We're committed to creating effective, safe, delightful, accessible, responsible products.</h3>
+                         <hr>
                     </div>
                 </section>
             </div>
