--- a/deploy/index.html
+++ b/deploy/index.html
@@ -12,53 +12,70 @@
 </head>
 
 <body>
-
-
-    <section id="section-1">
-    </section>
-    <section id="section-2" class="content-spacing">
-            <div id="section-2-desktop">
-                <aside></aside>
-                <section id="section-2-container">
-                    <div id="section-2-content">
-                        <hr> 
-                            <h1>Our mission is to empower people to live healthy, happy lives. </h1>
-                            <p>We're committed to creating effective, safe, delightful, accessible, responsible products.</h3>
-                         <hr>
-                    </div>
-                </section>
-            </div>
-        </section>
-    <section id="section-3" class="content-spacing">
+    <header>
+        <div>
+            <section id="logo-container">
+                <h1>Logo goes here</h1>
             </section>
-    <section id="section-4" class="content-spacing">
-                    <div id="section-4-content">
-                         <hr>
-                         <h1>You shouldn’t have to choose between what works and what’s good for you.</h1>
-                        <hr>
-                    </div>
-                </section>
-    <section id="section-5" class="content-spacing">
-                            <ul>
-                                <li id="g1"></li>
-                                <li id="g2"></li>
-                                <li id="g3"></li>
-                            </ul>
+        
+            <section id="burger-container">
+                <i class="fas fa-bars" id="burger-icon"></i>
+            </section>
+    
+            <nav id="nav-container" data-nav="main-navigation">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section id="section-1">
+        </section>
+    <section id="section-2" class="content-spacing">
+                <div id="section-2-desktop">
+                    <aside></aside>
+                    <section id="section-2-container">
+                        <div id="section-2-content">
+                            <hr> 
+                                <h1>Our mission is to empower people to live healthy, happy lives. </h1>
+                                <p>We're committed to creating effective, safe, delightful, accessible, responsible products.</h3>
+                             <hr>
+                        </div>
                     </section>
-    <section id="section-6" class="content-spacing">
-                            <div id="section-6-content">
-                                <aside></aside>
-                                <section>
-                                    <p>We’re a wellness brand empowering people to live happy, healthy lives. And we’re also people, just like you. When our founder couldn’t find one brand to trust for all her everyday needs, she had to create it. And she knew that there had to be others out there looking for safe products, simple solutions and clear information about their choices, just like her. If you want trusted, effective products that work for your family, your home and yourself, you’re Honest, too.</p>
-                                </section>
-                            </div>
+                </div>
+            </section>
+    <section id="section-3" class="content-spacing">
+                </section>
+    <section id="section-4" class="content-spacing">
+                        <div id="section-4-content">
+                             <hr>
+                             <h1>You shouldn’t have to choose between what works and what’s good for you.</h1>
+                            <hr>
+                        </div>
+                    </section>
+    <section id="section-5" class="content-spacing">
+                                <ul>
+                                    <li id="g1"></li>
+                                    <li id="g2"></li>
+                                    <li id="g3"></li>
+                                </ul>
                         </section>
+    <section id="section-6" class="content-spacing">
+                                <div id="section-6-content">
+                                    <aside></aside>
+                                    <section>
+                                        <p>We’re a wellness brand empowering people to live happy, healthy lives. And we’re also people, just like you. When our founder couldn’t find one brand to trust for all her everyday needs, she had to create it. And she knew that there had to be others out there looking for safe products, simple solutions and clear information about their choices, just like her. If you want trusted, effective products that work for your family, your home and yourself, you’re Honest, too.</p>
+                                    </section>
+                                </div>
+                            </section>
     <footer id="footer">
-                                <aside>
-                                <h5>©2020</h5>
-                                </aside>
-                                <article><img src="img/footer/logo.png" alt="Honest Company Logo"></article>
-                            </footer>
+                                    <aside>
+                                    <h5>©2020</h5>
+                                    </aside>
+                                    <article><img src="img/footer/logo.png" alt="Honest Company Logo"></article>
+                                </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Greensock -->
